syntax = "proto3";
package ostracon.abci;

option go_package = "github.com/Finschia/ostracon/abci/types";

// For more information on gogo.proto, see:
// https://github.com/gogo/protobuf/blob/master/extensions.md
import "tendermint/abci/types.proto";
import "tendermint/types/types.proto";
import "gogoproto/gogo.proto";

// This file is copied from http://github.com/tendermint/abci
// NOTE: When using custom types, mind the warnings.
// https://github.com/gogo/protobuf/blob/master/custom_types.md#warnings-and-issues

//----------------------------------------
// Request types

message Request {
  oneof value {
    tendermint.abci.RequestEcho               echo                 = 1;
    tendermint.abci.RequestFlush              flush                = 2;
    tendermint.abci.RequestInfo               info                 = 3;
    tendermint.abci.RequestSetOption          set_option           = 4;
    tendermint.abci.RequestInitChain          init_chain           = 5;
    tendermint.abci.RequestQuery              query                = 6;
    tendermint.abci.RequestBeginBlock         begin_block          = 7;
    tendermint.abci.RequestCheckTx            check_tx             = 8;
    tendermint.abci.RequestDeliverTx          deliver_tx           = 9;
    tendermint.abci.RequestEndBlock           end_block            = 10;
    tendermint.abci.RequestCommit             commit               = 11;
    tendermint.abci.RequestListSnapshots      list_snapshots       = 12;
    tendermint.abci.RequestOfferSnapshot      offer_snapshot       = 13;
    tendermint.abci.RequestLoadSnapshotChunk  load_snapshot_chunk  = 14;
    tendermint.abci.RequestApplySnapshotChunk apply_snapshot_chunk = 15;
    RequestBeginRecheckTx                     begin_recheck_tx     = 1000;  // 16~99 are reserved for merging original tendermint
    RequestEndRecheckTx                       end_recheck_tx       = 1001;
  }
}

message RequestBeginRecheckTx {
  tendermint.types.Header header = 1 [(gogoproto.nullable) = false];
}

message RequestEndRecheckTx {
  int64 height = 1;
}

//----------------------------------------
// Response types

message Response {
  oneof value {
    tendermint.abci.ResponseException          exception            = 1;
    tendermint.abci.ResponseEcho               echo                 = 2;
    tendermint.abci.ResponseFlush              flush                = 3;
    tendermint.abci.ResponseInfo               info                 = 4;
    tendermint.abci.ResponseSetOption          set_option           = 5;
    tendermint.abci.ResponseInitChain          init_chain           = 6;
    tendermint.abci.ResponseQuery              query                = 7;
    tendermint.abci.ResponseBeginBlock         begin_block          = 8;
    tendermint.abci.ResponseCheckTx            check_tx             = 9;
    tendermint.abci.ResponseDeliverTx          deliver_tx           = 10;
    tendermint.abci.ResponseEndBlock           end_block            = 11;
    tendermint.abci.ResponseCommit             commit               = 12;
    tendermint.abci.ResponseListSnapshots      list_snapshots       = 13;
    tendermint.abci.ResponseOfferSnapshot      offer_snapshot       = 14;
    tendermint.abci.ResponseLoadSnapshotChunk  load_snapshot_chunk  = 15;
    tendermint.abci.ResponseApplySnapshotChunk apply_snapshot_chunk = 16;
    ResponseBeginRecheckTx                     begin_recheck_tx     = 1000;  // 17~99 are reserved for merging original tendermint
    ResponseEndRecheckTx                       end_recheck_tx       = 1001;
  }
}

message ResponseBeginRecheckTx {
  uint32 code = 1;
}

message ResponseEndRecheckTx {
  uint32 code = 1;
}

//----------------------------------------
// Service Definition

service ABCIApplication {
  rpc Echo(tendermint.abci.RequestEcho) returns (tendermint.abci.ResponseEcho);
  rpc Flush(tendermint.abci.RequestFlush) returns (tendermint.abci.ResponseFlush);
  rpc Info(tendermint.abci.RequestInfo) returns (tendermint.abci.ResponseInfo);
  rpc SetOption(tendermint.abci.RequestSetOption) returns (tendermint.abci.ResponseSetOption);
  rpc DeliverTx(tendermint.abci.RequestDeliverTx) returns (tendermint.abci.ResponseDeliverTx);
  rpc CheckTx(tendermint.abci.RequestCheckTx) returns (tendermint.abci.ResponseCheckTx);
  rpc Query(tendermint.abci.RequestQuery) returns (tendermint.abci.ResponseQuery);
  rpc Commit(tendermint.abci.RequestCommit) returns (tendermint.abci.ResponseCommit);
  rpc InitChain(tendermint.abci.RequestInitChain) returns (tendermint.abci.ResponseInitChain);
  rpc BeginBlock(tendermint.abci.RequestBeginBlock) returns (tendermint.abci.ResponseBeginBlock);
  rpc EndBlock(tendermint.abci.RequestEndBlock) returns (tendermint.abci.ResponseEndBlock);
  rpc ListSnapshots(tendermint.abci.RequestListSnapshots) returns (tendermint.abci.ResponseListSnapshots);
  rpc OfferSnapshot(tendermint.abci.RequestOfferSnapshot) returns (tendermint.abci.ResponseOfferSnapshot);
  rpc LoadSnapshotChunk(tendermint.abci.RequestLoadSnapshotChunk) returns (tendermint.abci.ResponseLoadSnapshotChunk);
  rpc ApplySnapshotChunk(tendermint.abci.RequestApplySnapshotChunk) returns (tendermint.abci.ResponseApplySnapshotChunk);
  rpc BeginRecheckTx(RequestBeginRecheckTx) returns (ResponseBeginRecheckTx);
  rpc EndRecheckTx(RequestEndRecheckTx) returns (ResponseEndRecheckTx);
}
